tests/Aspire.Hosting.Kubernetes.Tests/Snapshots/KubernetesGatewayTests.AddGateway_WithHostGrpcRoute_GeneratesHostnameInGrpcRoute.verified.yaml
---
apiVersion: "gateway.networking.k8s.io/v1"
kind: "GRPCRoute"
metadata:
  name: "public-grpc-example-com-grpcroute"
spec:
  parentRefs:
    - name: "public"
  hostnames:
    - "grpc.example.com"
  rules:
    - matches:
        - method:
            type: "Exact"
            service: "greet.Greeter"
      backendRefs:
        - name: "greeter-service"
          port: 50051
